# sketch-to-cartoon

./: .gitignore  README.md
client/: CMakeLists.txt  main.cpp
client/UI/: SettingsWindow.cpp  SettingsWindow.h  mainwindow.cpp  mainwindow.h
client/controllers/: CanvasController.cpp  CanvasController.h  GeneratedImagesController.cpp  GeneratedImagesController.h  MainController.cpp  MainController.h
client/drawing_tools/: DrawTool.cpp  DrawTool.h  EraserTool.cpp  EraserTool.h  PenTool.cpp  PenTool.h
client/models/: CanvasModel.cpp  CanvasModel.h  GeneratedImagesModel.cpp  GeneratedImagesModel.h  MessageBus.cpp  MessageBus.h
client/settings/: Settings.cpp  Settings.h
client/strategies/generative_strategies/: DefaultStrategy.cpp  DefaultStrategy.h  GanInversionStrategy.cpp  GanInversionStrategy.h  GenerativeStrategy.cpp  GenerativeStrategy.h  GenerativeStrategyFactory.cpp  GenerativeStrategyFactory.h  SketchyGanStrategy.cpp  SketchyGanStrategy.h
client/views/: BottomBar.cpp  BottomBar.h  CanvasView.cpp  CanvasView.h  FullSizeImageWidget.cpp  FullSizeImageWidget.h  GeneratedImagesView.cpp  GeneratedImagesView.h
experiments/: Create_Sketch.py  evaluate_models.py  ids.txt  main.py  requirements.txt  script_for_dataset.py  valid_images.txt
experiments/dataset/: copy_good_src.py  creator.py  dataset.py  generate_from_points.py  showDataset.py  sketch_data.py
experiments/eval/: Evaluator.py  FID.py  FID2.py  LDPS.py  LPIPS.py  SketchFidelity.py
experiments/losses/: AlexNetLoss.py  CosineSimilarityLoss.py  InceptionV3.py
experiments/models/: CoolGan.py  HEDNet.py  SketchInverter.py  SketchyGan.py  StyleGan.py  StyleGan2.py  StyleGan2_new.py
experiments/pretrained/: Generate.py  PretrainedDiscriminator.py  PretrainedGenerator.py
experiments/servers/: GanInversionServer.py  GanInversionServer.spec  StrategyServer.py  StrategyServer.spec
experiments/test/: config.json
experiments/tests/: TestExperiments.py
experiments/training/: CoolGanTrainer.py  ExperimentFramework.py  FullExperiment.py  GanInversionExperiment.py  GanInversionTrainer.py  SimpleExperiment.py  SketchyGanTrainer.py  (+4 more)
(+39 files in other folders)
